_sass/_posts.scss
.post-header {
    margin-bottom: $vertical-spacing-unit;
}
.post-list {
    margin: 0;
    padding: 0;
    list-style: none;

    > li {
        border-bottom: 1px solid $light-gray;
        padding-bottom: $space-3;
        padding-top: $space-3;
    }
}
.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;
    margin-bottom: 10px;
    margin-top: 0;
    // @include media-query($on-laptop) {
    //     font-size: 36px;
    // }
}
.post-content {
    h2 {
        font-size: 42px;
        // @include media-query($on-laptop) {
        //     font-size: 28px;
        // }
    }
    h3 {
        font-size: 30px;
        // @include media-query($on-laptop) {
        //     font-size: 22px;
        // }
    }
    h4 {
        font-size: 20px;
        // @include media-query($on-laptop) {
        //     font-size: 18px;
        // }
    }
	p {
		opacity: 1.5;
	}
}
.post-meta {
    color: $grey-color;
    font-size: $small-font-size;
    margin-bottom: 0px;
}
.post-link {
    display: block;
    font-size: 42px;
}

